Minimum changes to compile for PrintrBoard

--- a/platformio.ini
+++ b/platformio.ini
@@ -18,7 +18,7 @@
 [platformio]
 src_dir      = Marlin
 boards_dir   = buildroot/share/PlatformIO/boards
-default_envs = mega2560
+default_envs = teensy20
 include_dir  = Marlin
 
 #
@@ -1597,6 +1597,19 @@ lib_ignore    = NativeEthernet
 platform      = teensy
 board         = teensy41
 src_filter    = ${common.default_src_filter} +<src/HAL/TEENSY40_41>
+
+#
+# Teensy++ 2.0
+#
+[env:teensy20]
+platform          = teensy
+#framework         = arduino
+board             = teensy2pp
+#build_flags       = ${common.build_flags}
+#board_build.f_cpu = 20000000L     ; Bug in Arduino framework disallows boards running at 20Mhz
+#lib_deps          = ${common.lib_deps}
+#lib_ldf_mode      = deep+
+#monitor_speed     = 250000
 
 #
 # Native
